k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quant-ingress
  namespace: tdsequential
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:           # ← ไม่ระบุ host เพราะเป็น Private Cluster ใช้ NAT
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quant-backend-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quant-frontend-svc
                port:
                  number: 80
